testsuite/tests/typecheck/should_fail/T19109.hs
{-# LANGUAGE Haskell2010 #-}
module T19109 where

import Data.Functor.Identity

f (Identity @Int x) = x
