testsuite/tests/typecheck/should_fail/T19109.stderr
T19109.hs:6:13: error: [GHC-78249]
    Illegal invisible type pattern: @Int
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

